# pyramid-resource

./: LICENSE  Makefile  README.md  README.rst  pyproject.toml  pyramid_resource.py  setup.cfg  setup.py  test.py
.github/workflows/: publish.yml  tests.yml
examples/: 01_root_only.py  02_children.py  03_dynamic.py  03_name_resolution.py  04_dynamic.py  child_resources.py  dotted_names.py  dynamic.py  root_only.py
tests/: test_examples.py  test_integration.py  test_name_resolution.py  test_resource.py
tests/pkgs/dottednameresolution/: __init__.py  childmodule.py
tests/pkgs/nameresolution/: __init__.py
tests/pkgs/venusianresolution/: __init__.py
tests/pkgs/widgetapp/: __init__.py
