[tool.poetry]
name = "pyramid-resource"
version = "0.1.0"
description = "A simple base resource class for Pyramid traversal."
readme = "README.md"
homepage = "https://github.com/luhn/pyramid-resource"
repository = "https://github.com/luhn/pyramid-resource"
authors = ["Theron Luhn <theron@luhn.com>"]
license = "MIT"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Framework :: Pyramid",
]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
