[tool.poetry]
name = "pyramid-resource"
version = "0.3.0"
description = "A simple base resource class for Pyramid traversal."
readme = "README.md"
homepage = "https://github.com/luhn/pyramid-resource"
repository = "https://github.com/luhn/pyramid-resource"
authors = ["Theron Luhn <theron@luhn.com>"]
license = "MIT"
classifiers = [
	"Development Status :: 4 - Beta",
	"Framework :: Pyramid",
]

[tool.poetry.dependencies]
python = "^3.4"
pyramid = "^1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pytest = "^4.0"
webtest = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
