[metadata]
name = pyramid-resource
version = 0.4.1
author = Theron Luhn
author_email = theron@luhn.com
description = A simple base resource class for Pyramid traversal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luhn/pyramid-resource
classifiers =
	Development Status :: 4 - Beta
	Framework :: Pyramid
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Programming Language :: Python

[options]
py_modules = pyramid_resource
python_requires = >=3.6
install_requires =
	pyramid>=1.7

[options.extras_require]
testing =
	pytest~=6.2
	webtest~=2.0
linting =
	flake8~=5.0.4
	black~=22.6.0
	isort~=5.10
